--- a/test-task/uch-yantik/scss/global/_variables.scss
+++ b/test-task/uch-yantik/scss/global/_variables.scss
@@ -9,9 +9,12 @@ $color-seashel:         #FFF5EF;
 $color-sauvignon:       #F9EBE3;
 $color-tuft-bush:       #FAD8C5;
 $color-whisper:         #EBEBEB;
+$color-whisper-2:       #EDEDED;
 $color-suva-grey:       #8B8B8B;
+$color-white-smoke:     #F8F8F8;
 
 $color-sauvignon-20:   rgb(249, 235, 227, 0.2);
+$color-black-10:        rgb(0, 0, 0, 0.1);
 $color-black-20:        rgb(0, 0, 0, 0.2);
 $color-black-30:        rgb(0, 0, 0, 0.3);
 $color-black-50:        rgb(0, 0, 0, 0.5);
