--- a/test-task/uch-yantik/scss/global/_variables.scss
+++ b/test-task/uch-yantik/scss/global/_variables.scss
@@ -13,11 +13,16 @@ $color-whisper-2:       #EDEDED;
 $color-suva-grey:       #8B8B8B;
 $color-white-smoke:     #F8F8F8;
 
-$color-sauvignon-20:   rgb(249, 235, 227, 0.2);
+$color-seal-brown-30:   rgb(37, 2, 2, 0.3);
+$color-seal-brown-50:   rgb(37, 2, 2, 0.5);
+$color-sauvignon-60:    rgb(249, 235, 227, 0.6);
+$color-sauvignon-20:    rgb(249, 235, 227, 0.2);
 $color-black-10:        rgb(0, 0, 0, 0.1);
 $color-black-20:        rgb(0, 0, 0, 0.2);
 $color-black-30:        rgb(0, 0, 0, 0.3);
 $color-black-50:        rgb(0, 0, 0, 0.5);
+
+$transition-200:        ease-in 0.2s;
 
 /* Fonts */ 
 /* ---------------------- */
