--- a/test-task/uch-yantik/scss/style.scss
+++ b/test-task/uch-yantik/scss/style.scss
@@ -18,3 +18,6 @@
 @import "blocks/_banner";
 @import "blocks/_about";
 @import "blocks/_media";
+@import "blocks/_swiper";
+@import "blocks/_menu";
+@import "blocks/_menu-item";
