--- a/test-task/uch-yantik/css/style.css
+++ b/test-task/uch-yantik/css/style.css
@@ -560,6 +560,7 @@ template {
   font-size: 18px;
   font-weight: 600;
   line-height: 34px;
+  color: #250202;
 }
 .footer__work-mode {
   display: flex;
@@ -609,15 +610,52 @@ template {
   max-width: 182px;
 }
 
+.black-horse {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50px;
+  max-height: 120px;
+}
+.black-horse::before {
+  content: "";
+  background-color: #9747FF;
+  position: absolute;
+  width: 781px;
+  height: 781px;
+  left: -8%;
+  top: -153px;
+  border-radius: 50%;
+  filter: blur(125px);
+}
+.black-horse::after {
+  content: "";
+  background-color: #9747FF;
+  position: absolute;
+  width: 781px;
+  height: 781px;
+  right: -12%;
+  bottom: -145px;
+  border-radius: 50%;
+  filter: blur(125px);
+}
 .black-horse__wrapper {
   background-color: #EBEBEB;
   padding: 50px 0 188px;
 }
 .black-horse__img {
-  width: 1558px;
-  height: 120px;
+  width: 100%;
+  height: auto;
   margin: 0 auto;
-  border-radius: 50px;
+}
+.black-horse__icon {
+  position: absolute;
+  width: 298px;
+  height: 70px;
+  top: 22%;
+  left: 2.5%;
 }
 
 .banner {
@@ -647,6 +685,7 @@ template {
   display: flex;
   width: 100%;
   height: 100%;
+  align-items: center;
   justify-content: space-between;
   padding: 0 3% 0 4.5%;
 }
@@ -655,17 +694,21 @@ template {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
 }
 .banner__heading {
   font-family: "Soyuz Grotesk", "Arial", sans-serif;
-  font-size: 80px;
+  font-size: clamp(5rem, 0.6818rem + 3.6364vw, 7.5rem);
   font-weight: 700;
   line-height: 80px;
   margin: 0 0 8%;
 }
+@media (min-width: 2550px) {
+  .banner__heading {
+    line-height: 100px;
+  }
+}
 .banner__description {
-  font-size: 18px;
+  font-size: clamp(1.125rem, 0.0455rem + 0.9091vw, 1.75rem);
   font-weight: 500;
   line-height: 26px;
   margin: 0;
@@ -692,7 +735,7 @@ template {
 }
 .banner__menu-text {
   color: #250202;
-  font-size: 18px;
+  font-size: clamp(1.125rem, 0.0455rem + 0.9091vw, 1.75rem);
   font-weight: 600;
   line-height: 26px;
 }
@@ -744,12 +787,12 @@ template {
 }
 .banner__next-caption {
   font-family: "Soyuz Grotesk", "Arial", sans-serif;
-  font-size: 18px;
+  font-size: clamp(1.125rem, 0.0455rem + 0.9091vw, 1.75rem);
   font-weight: 700;
   line-height: 26px;
 }
 .banner__next-name {
-  font-size: 18px;
+  font-size: clamp(1.125rem, 0.0455rem + 0.9091vw, 1.75rem);
   font-weight: 500;
   line-height: 26px;
 }
@@ -1193,6 +1236,10 @@ template {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: ease-in 0.2s;
+}
+.contacts__social-item:hover, .contacts__social-item:focus-visible {
+  background-color: #FAD8C5;
 }
 .contacts__map {
   width: 100%;
