--- a/test-task/uch-yantik/scss/blocks/_footer.scss
+++ b/test-task/uch-yantik/scss/blocks/_footer.scss
@@ -94,6 +94,7 @@
             font-size: 18px;
             font-weight: 600;
             line-height: 34px;
+            color: $color-seal-brown;
         }
     }
 
