--- a/test-task/uch-yantik/scss/blocks/_about.scss
+++ b/test-task/uch-yantik/scss/blocks/_about.scss
@@ -13,6 +13,20 @@
         color: $color-white;
         justify-content: space-between;
         gap: 30px;
+
+        @media (max-width: 1320px) {
+            gap: 40px;
+        }
+
+        @include vp-1023 {
+            min-height: auto;
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        @include vp-767 {
+            padding: 24px 20px;
+        }
     }
 
     &__bg {
@@ -23,6 +37,7 @@
         left: 0;
         z-index: -1;
         border-radius: 50px;
+        object-fit:cover;
     }
 
     &__part {
@@ -33,6 +48,14 @@
         justify-content: flex-end;
         max-width: 470px;
 
+        @media (max-width: 1550px) {
+            width: 35%;
+        }
+
+        @include vp-1023 {
+            display: none;
+        }
+
         &--right {
             justify-content: flex-start;
         }
@@ -41,7 +64,7 @@
     &__heading {
         font-family: $ff-grotesk;
         margin: 0 0 12px;
-        font-size: 80px;
+        font-size:  clamp(3.75rem, 2.3011rem + 2.2727vw, 5rem);
         font-weight: 700;
         line-height: 80px;
     }
@@ -58,8 +81,47 @@
         align-items: center;
 
         &-icon {
-            width: 279px;
-            height: 279px;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__mobile {
+        display: none;
+
+        @include vp-1023 {
+            display: block;
+        }
+
+
+        .about__part {
+            display: none;
+            max-width: none;
+            width: 100%;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 26px;
+            margin: 15px 0 0 0;
+        }
+
+        .about__part--actve {
+            display: block;
+        }
+    }
+
+    &__btn {
+        background: transparent;
+        border: none;
+        font-family: $ff-grotesk;
+        font-size: 28px;
+        font-weight: 700;
+        line-height: 36px;
+        color: $color-white;
+        opacity: 0.3;
+        cursor: pointer;
+
+        &--active {
+            opacity: 1;
         }
     }
 }
