--- a/test-task/uch-yantik/scss/blocks/_banner.scss
+++ b/test-task/uch-yantik/scss/blocks/_banner.scss
@@ -4,6 +4,28 @@
     width: 100%;
     min-height: 675px;
     height: calc(100vh - 140px);
+    margin-top: 140px;
+
+    @media (max-width: 1470px) {
+        margin-top: 124px;
+        height: calc(100vh - 124px);
+    }
+
+    @include vp-1023 {
+        margin-top: 88px;
+        height: calc(100vh - 88px);
+        padding-top: 13px;
+    }
+
+    @include vp-767 {
+        min-height: 860px;
+        margin-top: 74px;
+        height: calc(100vh - 74px);
+    }
+
+    @media (max-width: 645px) {
+        min-height: 660px;
+    }
 
     &__ornament {
         width: 855px;
@@ -13,14 +35,38 @@
         z-index: -1;
         position: absolute;
 
+        @include vp-1023 {
+            width: 612px;
+            height: 687px;
+        }
+
+        @include vp-767 {
+            width: 375px;
+            height: 421px;
+        }
+
         &--1 {
             top: -76%;
             left: -24%;
+
+            @include vp-1023 {
+                top: -31%;
+                left: -26%;
+            }
+
+            @include vp-767 {
+                top: -5%;
+            }
         }
 
         &--2 {
             bottom: -33%;
             right: -20%;
+
+            @include vp-767 {
+                bottom: -3%;
+                right: -33%;
+            }
         }
     }
 
@@ -31,6 +77,13 @@
         align-items: center;
         justify-content: space-between;
         padding: 0 3% 0 4.5%;
+
+        @include vp-767 {
+            padding: 0;
+            flex-direction: column-reverse;
+            justify-content: center;
+            gap: 30px;
+        }
     }
 
     &__content {
@@ -38,6 +91,12 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        position: relative;
+        z-index: 1;
+
+        @include vp-767 {
+            align-items: normal;
+        }
     }
 
     &__heading {
@@ -50,6 +109,11 @@
         @media (min-width: 2550px) {
             line-height: 100px;
         }
+
+        @include vp-767 {
+            font-size: 40px;
+            line-height: 40px;
+        }
     }
 
     &__description {
@@ -58,6 +122,11 @@
         line-height: 26px;
         margin: 0;
         margin: 0 0 7%;
+
+        @include vp-767 {
+            font-size: 18px;
+            line-height: 26px;
+        }
     }
 
     &__menu {
@@ -70,6 +139,10 @@
         gap: 10px;
         border-radius: 25px;
         margin: 0 0 7%;
+
+        @include vp-767 {
+            min-width: auto;
+        }
 
         &:hover,
         &:focus-visible {
@@ -96,6 +169,10 @@
         align-items: center;
         gap: 37px;
         margin: 47px 0 0 0;
+
+        @include vp-767 {
+            display: none;
+        }
 
         &-link {
             width: 70px;
@@ -155,6 +232,35 @@
             font-size: clamp(1.125rem, 0.0455rem + 0.9091vw, 1.75rem);
             font-weight: 500;
             line-height: 26px;
+        }
+    }
+
+    &__img {
+        width: 947px;
+        height: 739px;
+
+        @media (max-width: 1550px) {
+            position: absolute;
+            top: 0;
+            right: 0;
+            opacity: 0.5;
+        }
+
+        @include vp-1023 {
+            width: 785px;
+            height: 658px;
+        }
+
+        @include vp-767 {
+            opacity: 1;
+            position: static;
+            width: 610px;
+            height: 517px;
+        }
+
+        @media (max-width: 645px) {
+            width: 295px;
+            height: 250px;
         }
     }
 }
