--- a/test-task/uch-yantik/scss/blocks/_black-horse.scss
+++ b/test-task/uch-yantik/scss/blocks/_black-horse.scss
@@ -17,6 +17,10 @@
         top: -153px;
         border-radius: 50%;
         filter: blur(125px);
+
+        @include vp-767 {
+            filter: blur(100px);
+        }
     }
 
     &::after {
@@ -29,6 +33,10 @@
         bottom: -145px;
         border-radius: 50%;
         filter: blur(125px);
+
+        @include vp-767 {
+            display: none;
+        }
     }
     
     &__wrapper {
@@ -46,7 +54,31 @@
         position: absolute;
         width: 298px;
         height: 70px;
-        top: 22%;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 2;
         left: 2.5%;
+
+        @media (max-width: 1250px) {
+            width: 241px;
+        }
+        
+        @include vp-1023 {
+            left: 1%;
+            width: 212px;
+            height: 43px;
+        }
+
+        @include vp-767 {
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 241px;
+            height: 70px;
+        }
+
+        @media (max-width: 400px) {
+            width: 80%;
+            height: auto;
+        }
     }
 }
