--- a/test-task/uch-yantik/scss/blocks/_contacts.scss
+++ b/test-task/uch-yantik/scss/blocks/_contacts.scss
@@ -1,10 +1,26 @@
 .contacts {
+    margin-top: 15%;
+    overflow: hidden;
+
+    @include vp-1023 {
+        margin-top: 0;
+        margin-bottom: 15%;
+    }
+
+    @include vp-767 {
+        margin-bottom: 0;
+    }
+
     &__wrapper {
         display: flex;
-        gap: 20px;
+        gap: 55px;
         align-items: center;
         justify-content: space-between;
         margin: 0 0 65px;
+
+        @include vp-1023 {
+            flex-direction: column;
+        }
     }
 
     &__info {
@@ -12,6 +28,12 @@
         flex-direction: column;
         gap: 30px;
         max-width: 345px;
+
+        @include vp-1023 {
+            max-width: none;
+            width: 100%;
+            gap: 20px;
+        }
     }
 
     &__welcome {
@@ -20,12 +42,22 @@
         font-weight: 700;
         line-height: 80px;
         margin: 0;
+
+        @include vp-767 {
+            font-size: 40px;
+            line-height: 40px;
+        }
     }
 
     &__open-hours {
         font-size: 24px;
         font-weight: 600;
         line-height: 34px;
+
+        @include vp-767 {
+            font-size: 18px;
+            line-height: 24px;
+        }
     }
 
     &__caption {
@@ -47,6 +79,11 @@
             font-size: 24px;
             font-weight: 700;
             line-height: 34px;
+
+            @include vp-767 {
+                font-size: 18px;
+                line-height: 24px;
+            }
         }
     }
 
@@ -74,6 +111,11 @@
             font-weight: 600;
             line-height: 34px;
             color: $color-seal-brown;
+
+            @include vp-767 {
+                font-size: 18px;
+                line-height: 24px;
+            }
         }
     }
 
@@ -103,6 +145,38 @@
         }
     }
 
+    &__location {
+        width: 100%;
+        max-width: 1000px;
+        position: relative;
+    }
+
+    &__ornament {
+        width: 855px;
+        height: 958px;
+        color: $color-seal-brown-2;
+        opacity: 2%;
+        z-index: -1;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        @include vp-1023 {
+            width: 612px;
+            height: 687px;
+        }
+
+        @include vp-767 {
+            width: 375px;
+            height: 421px;
+            transform: translate(0, 0);
+            top: auto;
+            bottom: -67%;
+            left: -22%;
+        }
+    }
+
     &__map {
         width: 100%;
         height: 100%;
@@ -110,12 +184,17 @@
         mix-blend-mode: hard-light;
 
         &-wrapper {
-            width: 1000px;
+            width: 100%;
             height: 620px;
             border-radius: 50px 50px 150px 150px;
             overflow: hidden;  
             background-color: #b7521b;     
             background-blend-mode: hue, normal;
+
+            @include vp-1023 {
+                border-radius: 25px;
+                height: 460px;
+            }
         }
     }
 
@@ -124,6 +203,10 @@
         align-items: center;
         justify-content: flex-end;
         gap: 32px;
+
+        @include vp-1023 {
+            display: none;
+        }
 
         &-link {
             width: 70px;
