--- a/test-task/uch-yantik/scss/blocks/_footer.scss
+++ b/test-task/uch-yantik/scss/blocks/_footer.scss
@@ -3,15 +3,37 @@
     align-items: flex-start;
     column-gap: 54px;
     position: relative;
+    margin-bottom: 40px;
+
+    @media (max-width: 1230px) {
+        gap: 35px;
+    }
+
+    @include vp-1023 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin-bottom: 35px;
+    }
+    
+    @include vp-767 {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
 
     &::before {
         content: "";
         background-color: $color-black-30;
-        height: 235%;
-        top: -48%;
+        height: 310%;
+        top: -65%;
         width: 1px;
         position: absolute;
         right: 34%;
+
+        
+        @media (max-width: 1450px) {
+            display: none;
+        }
     }
 
     &__wrapper {
@@ -20,10 +42,28 @@
         padding: 75px 0 80px;
         overflow: hidden;
         border-bottom: 1px solid $color-black-30;
+
+        @include vp-1023 {
+            padding: 50px 0;
+        }
+    }
+
+    &__logo-link {
+
+        @include vp-1023 {
+            grid-column: span 3;
+            margin: 0 auto;
+        }
     }
 
     &__logo-icon {
         color: $color-suva-grey;
+        width: 251px;
+        height: 80px;
+
+        @include vp-767 {
+            width: 100%;
+        }
     }
 
     &__navigate {
@@ -37,6 +77,14 @@
         &-wrapper {
             display: flex;
             gap: 70px;
+
+            @include vp-1023 {
+                gap: 50px;
+            }
+
+            @include vp-767 {
+                gap: 60px;
+            }
         }
 
         &-item {
@@ -53,6 +101,10 @@
         gap: 15px;
         color: $color-black-50;
         margin: 0 0 0 4%;
+
+        @media (max-width: 1230px) {
+            margin: 0;
+        }
     }
 
     &__address {
@@ -106,6 +158,14 @@
         margin: 0 14.5% 0 auto;
         max-width: 320px;
 
+        @media (max-width: 1450px) {
+            margin-right: 0;
+        }
+
+        @include vp-767 {
+            margin: 0;
+        }
+
         &-wrapper {
             display: flex;
             flex-direction: column;
@@ -141,6 +201,16 @@
         right: 2%;
         color: $color-seal-brown-2;
         opacity: 1%;
+
+        @include vp-1023 {
+            top: 28%;
+            right: -19%;
+        }
+
+        @include vp-767 {
+            top: 71%;
+            right: -44%;
+        }   
     }
 
     &__caption {
