--- a/test-task/uch-yantik/scss/blocks/_header.scss
+++ b/test-task/uch-yantik/scss/blocks/_header.scss
@@ -1,18 +1,48 @@
 .header {
     padding: 30px 0 26px;
     margin: 0;
+    position: fixed;
+    width: 100%;
+    background-color: $color-white;
+    z-index: 10;
+
+    @include vp-1023 {
+        padding: 10px 0;
+    }
     
     &__wrapper { 
         display: flex; 
         align-items: center;
         gap: 50px;
+
+        @media (max-width: 1270px) {
+            justify-content: space-between;
+            gap: 20px;
+        }
+
+        @include vp-1023 {
+            flex-direction: row-reverse;
+            justify-content: space-between;
+        }
     }
 
     &__logo {
+        z-index: 7;
+
         &-icon {
             color: $color-seal-brown-2;
             width: 251px;
             height: 80px; 
+
+            @media (max-width:1480px) {
+                width: 201px;
+                height: 64px;
+            }
+
+            @include vp-767 {
+                width: 158px;
+                height: 50px;
+            }
         }
     }
 
@@ -23,6 +53,15 @@
         font-weight: 500;
         line-height: 26px;
         margin: 0 0 0.6% 3%;
+
+        @media (max-width: 1160px) {
+            margin-left: 0;
+            gap: 11px;
+        }
+
+        @include vp-1023 {
+            display: none;
+        }
 
         &-link {
             color: $color-seal-brown;
@@ -45,11 +84,23 @@
         gap: 10px;
         align-items: flex-start;
 
+        @media (max-width:1470px) {
+            display: none;
+        }
+
         &-wrapper {
             margin: 0 7% 0 auto;
             display: flex;
             gap: 47px;
             align-items: center;
+
+            @media (max-width:1270px) {
+                margin: 0;
+            }
+
+            @include vp-1023 {
+                display: none;
+            }
         }
 
         &-icon {
