--- a/test-task/uch-yantik/scss/blocks/_menu-item.scss
+++ b/test-task/uch-yantik/scss/blocks/_menu-item.scss
@@ -6,6 +6,11 @@
     position: relative;
     $root: &;
 
+    @include vp-767 {
+        width: 212px;
+        gap: 0;
+    }
+
     &:hover,
     &:focus-visible {
         #{$root}__img {
@@ -24,6 +29,12 @@
         border-radius: 50px;
         transition: transform ease 1s;
 
+        @include vp-767 {
+            width: 212px;
+            height: 212px;
+            margin-bottom: 10px;
+        }
+
         &-wrapper {
             border: 2px solid $color-seal-brown-2;
             border-radius: 50px;
@@ -31,6 +42,10 @@
             height: 370px;
             overflow: hidden;
             transition: transform ease 0.4s;
+
+            @include vp-767 {
+                height: 212px;
+            }
         }
     }
 
@@ -39,6 +54,12 @@
         font-size: 36px;
         font-weight: 700;
         line-height: 46px;
+
+        @include vp-767 {
+            font-size: 28px;
+            line-height: 32px;
+            margin-bottom: 2px;
+        }
     }
 
     &__gram {
@@ -46,6 +67,11 @@
         font-weight: 600;
         line-height: 26px;
         color: $color-seal-brown-30;
+
+        
+        @include vp-767 {
+            font-size: 18px;
+        }
 
         &-2 {
             color: $color-seal-brown-50;
@@ -57,6 +83,11 @@
         font-size: 18px;
         font-weight: 500;
         line-height: 26px;
+
+        
+        @include vp-767 {
+            font-size: 16px;
+        }
     }
 
     &__price,
