--- a/test-task/uch-yantik/scss/global/_reboot.scss
+++ b/test-task/uch-yantik/scss/global/_reboot.scss
@@ -40,6 +40,14 @@ h2 {
 
 section {
   margin: 0 0 75px;
+
+  @include vp-1023 {
+    margin: 0 0 60px
+  }
+
+  @include vp-767 {
+    margin: 0 0 30px;
+  }
 }
 
 .wrapper {
