--- a/test-task/uch-yantik/scss/global/_variables.scss
+++ b/test-task/uch-yantik/scss/global/_variables.scss
@@ -1,5 +1,4 @@
-/* Color */ 
-/* ---------------------- */
+// Color
 
 $color-white:           #ffffff;
 $color-black:           #000000;
@@ -12,9 +11,11 @@ $color-whisper:         #EBEBEB;
 $color-whisper-2:       #EDEDED;
 $color-suva-grey:       #8B8B8B;
 $color-white-smoke:     #F8F8F8;
+$color-pot-pourri:      #EFDFD7;
 
 $color-seal-brown-30:   rgb(37, 2, 2, 0.3);
 $color-seal-brown-50:   rgb(37, 2, 2, 0.5);
+$color-seal-brown-2-05: rgba(57, 0, 0, 0.05);
 $color-sauvignon-60:    rgb(249, 235, 227, 0.6);
 $color-sauvignon-20:    rgb(249, 235, 227, 0.2);
 $color-black-10:        rgb(0, 0, 0, 0.1);
@@ -24,8 +25,12 @@ $color-black-50:        rgb(0, 0, 0, 0.5);
 
 $transition-200:        ease-in 0.2s;
 
-/* Fonts */ 
-/* ---------------------- */
+// Fonts
 
 $ff-montserrat: 'Montserrat', 'Arial', sans-serif;
 $ff-grotesk: 'Soyuz Grotesk', 'Arial', sans-serif;
+
+// Viewport
+
+$vp-tablet: 1023px;
+$vp-mobile: 767px;
