--- a/test-task/uch-yantik/scss/blocks/_animation.scss
+++ b/test-task/uch-yantik/scss/blocks/_animation.scss
@@ -5,3 +5,11 @@
         transform: rotate(359deg);
     }
 }
+
+@keyframes opacity {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+}
