--- a/test-task/uch-yantik/scss/blocks/_menu.scss
+++ b/test-task/uch-yantik/scss/blocks/_menu.scss
@@ -70,11 +70,14 @@
         cursor: pointer;
 
         &:hover,
-        &:focus-visible {
+        &:focus-visible,
+        &--active {
             background-color: $color-seashel;
         }
 
         transition: background-color $transition-200;
+
+
     }
 
     &__navigate {
@@ -120,6 +123,7 @@
         justify-content: center;
         left: auto;
         flex-shrink: 0;
+        cursor: pointer;
 
         @include vp-1023 {
             width: 60px;
