--- a/test-task/uch-yantik/scss/blocks/_burger.scss
+++ b/test-task/uch-yantik/scss/blocks/_burger.scss
@@ -15,6 +15,8 @@
         width: 31px;
         height: 31px;
         cursor: pointer;
+        position: relative;
+        z-index: 7;
     }
 
     &::before,
