--- a/test-task/uch-yantik/scss/blocks/_media.scss
+++ b/test-task/uch-yantik/scss/blocks/_media.scss
@@ -5,7 +5,7 @@
         gap: 50px;
         width: 100%;
 
-        @media (max-width: 1719px) {
+        @media (max-width: 1175px) {
             flex-direction: column-reverse;
         }
     }
@@ -82,8 +82,8 @@
             height: 89%;
             padding: 40px;
 
-            @media (max-width: 1719px) {
-                min-height: 860px;
+            @media (max-width: 1175px) {
+                min-height: 615px;
             }
 
             @include vp-767 {
@@ -173,8 +173,7 @@
     }
 
     &__articles {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
         gap: 25px;
 
         @include vp-1023 {
@@ -205,8 +204,12 @@
             border-radius: 25px;
             min-height: 502px;
 
-            @media (max-width: 1719px) {
+            @media (max-width: 1700px) {
                 min-height: auto;
+                
+                &:last-child {
+                    display: none;
+                }
             }
 
             @include vp-1023 {
@@ -263,6 +266,7 @@
                 font-size: 18px;
                 font-weight: 600;
                 line-height: 26px;
+                text-align: center;
 
                 &-icon {
                     width: 34px;
